--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,9 +1,17 @@
 <div class="content-card card-section">
   <div class="container-fluid">
     <div class="row">
-       <div class="col-lg-11 offset-lg-1 col-sm-12 compute">
+       <div class="col-lg-2 offset-lg-1 col-sm-12 compute">
          <h3>Compute</h3>
-       </div>
+          <div class="onoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+            <label class="onoffswitch-label" for="myonoffswitch">
+               <span class="onoffswitch-inner"></span>
+               <span class="onoffswitch-switch"></span>
+             </label>
+            </div> 
+         </div>
+
        <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row with-line">
          <div class="row">
 
