--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -893,7 +893,9 @@
   text-align: right;
 }
 .onoffswitch-switch {
-  display: block; width: 22px; margin: 9px;
+  display: block;
+  width: 26px;
+  margin: 7px;
   background: @global-absolute-white;
   position: absolute; top: 0; bottom: 0;
   right: 61px;
