toggle height fixed

--- a/themes/cca-general/assets/less/pages/pricing.less
+++ b/themes/cca-general/assets/less/pages/pricing.less
@@ -62,7 +62,7 @@
 
     /* CONTENT-CARD*/
   .content-card {
-    padding: 100px 0;
+    padding: 80px 0;
 
     h1 {
       text-transform: uppercase;
@@ -853,7 +853,10 @@
 
 .onoffswitch {
   position: relative; width: 100px;
-  -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select: none;
+  margin-top: 35px;
 }
 .onoffswitch-checkbox {
   display: none;
