--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,7 +1,10 @@
 <div class="content-card card-section">
   <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-1 offset-lg-10 col-sm-12 compute">
+        <div class="col-lg-9 offset-lg-1 col-sm-12 compute">
+          <h3>Compute</h3>
+        </div>
+        <div class="col-lg-1 col-sm-12 compute">
         <div class="onoffswitch">
             <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
             <label class="onoffswitch-label" for="myonoffswitch">
@@ -13,9 +16,6 @@
       </div>
 
       <div class="row">
-       <div class="col-lg-11 offset-lg-1 col-sm-12 compute">
-         <h3>Compute</h3>
-         </div>
 
        <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row with-line">
          <div class="row">
