--- a/themes/cca-general/assets/less/pages/home.less
+++ b/themes/cca-general/assets/less/pages/home.less
@@ -40,6 +40,24 @@
     }
   }
 
+  /** Healthcare **/
+
+  .healthcare {
+    background: #ed6979;
+    background-image: -webkit-image-set()
+
+    background: -webkit-linear-gradient(#ed6979, #ff6a00);
+    background: -o-linear-gradient(#ed6979, #ff6a00);
+    background: -moz-linear-gradient(#ed6979, #ff6a00);
+    background: linear-gradient(#ed6979, #ff6a00);
+  }
+ 
+
+
+
+
+
+
   /* Call to Action */
   .call-to-action-card {
     background: @global-official-orange;
