--- a/themes/cca-general/layouts/partials/homepage/features.html
+++ b/themes/cca-general/layouts/partials/homepage/features.html
@@ -14,6 +14,26 @@
       </div>
     </div>
 
+    <div class="healthcare">
+      <div class="container-fluid">
+        <div class="row text-row-healthcare-card">
+          <div class="col-sm-12">
+            <h4>Healthcare Solutions</h4>
+          </div>
+        </div>
+        <div class="row workloads col-lg-10 offset-lg-1 col-sm-12">
+          <div class="col-lg-8 offset-lg-2 col-sm-12">
+            <p>cloud.ca offers healthcare SaaS companies a trusted platform for their apps, while ensuring that Canadian data remains in Canada</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 healthcare-button">
+            <a href="/healthcare-solutions">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="row technical-brief">
       <div class="col-sm-12">
         <h3>Technical brief</h3>
