--- a/themes/cca-general/assets/less/pages/home.less
+++ b/themes/cca-general/assets/less/pages/home.less
@@ -44,12 +44,12 @@
 
   .healthcare {
     margin: 0 -15px;
-    background: #ff6a00, url(/../../../static/images/healthcare-line.svg);
+    background: #ff6a00, url(/../../../static/images/healthcare-line.png);
 
-    background: -webkit-linear-gradient(#ed6979, #ff6a00), url(/../../../images/healthcare-line.svg) no-repeat bottom center;
-    background: -o-linear-gradient(#ed6979, #ff6a00), url(/../../../images/healthcare-line.svg) no-repeat bottom center;
-    background: -moz-linear-gradient(#ed6979, #ff6a00), url(/../../../static/images/healthcare-line.svg) no-repeat bottom center;
-    background: linear-gradient(#ed6979, #ff6a00), url(/../../../static/images/healthcare-line.svg) no-repeat bottom center;
+    background: -webkit-linear-gradient(#ed6979, #ff6a00), url(/../../../images/healthcare-line.png) no-repeat bottom center;
+    background: -o-linear-gradient(#ed6979, #ff6a00), url(/../../../images/healthcare-line.png) no-repeat bottom center;
+    background: -moz-linear-gradient(#ed6979, #ff6a00), url(/../../../static/images/healthcare-line.png) no-repeat bottom center;
+    background: linear-gradient(#ed6979, #ff6a00), url(/../../../static/images/healthcare-line.png) no-repeat bottom center;
 
     h4 {
       font-size: 40px;
